updated workspace service